    descriptive atoms.
  - Correct generation of container nodes even when the list of successors
    is empty (arity used to be broken).

* Building SATIrE without PAG [GB]
  - SATIrE can now be built without requiring PAG; use --without-pag
    configure flag. C++ source code can check for definition of the HAVE_PAG
    macro (to some true value) for conditional compilation.

* New data flow analysis attribute "position" [GB]
  - can be used to get information about the interprocedural analysis context

V0.8.5 2008-11-22 GB,AP,VP,MS

* Tested with: [MS]
  - ROSE 0.9.3a-1593
  - PAG 9.0.0.92248
  - flex 2.5.33
  - bison 2.3
  - g++ 4.2.0 (>= 4.2.0 required by ROSE with EDG binaries)
  - Boost 1_36 (>= 1_35 required by ROSE)

* Experimental points-to/alias analysis for C programs [GB]
  - specify --run-pointsto-analysis command line flag, PAG analyses then
    have access to the new Location type and associated auxiliary functions;
    see docs/satire_attributes_auxiliary_functions for details and
    examples/pointsto_live_variables for a small example
  - specify --resolve-funcptr-calls command line flag to connect
    ExternalCall nodes with all the possible target function entry nodes as
    determined by points-to analysis
  - both of these work for C programs (not C++) without calls to external
    functions

* Changes in PAG analyzer integration architecture [GB,VP]
  - analyzers are encapsulated as C++ objects, and it will soon be possible
    to mix and match/distribute analyzers as a library with a simple header
    file

* Predefined SATIrE attribute, type, and auxiliary function declarations [GB]
  - using new features provided by PAG 9.0.0.92248, SATIrE's attributes, types,
    and auxiliary functions are now declared automatically; user-defined
    declarations are no longer necessary (or allowed)

* Termite [AP]
  - better float/double support
  - clang patch pre-release

V0.8.4 2008-09-26 GB,AP,MS

* Tested with: [MS]
  - ROSE 0.9.3a-1593