@@ -85,6 +85,8 @@ AnalyzerOptions::AnalyzerOptions(): _optionsErrorMessage(""),_optionsInfo(""),_n
     "                            program AST\n"
     "   --output-icfg=<FILENAME> output icfg of input program\n"
     "   --output-binary-ast=<FILENAME> write AST to binary file\n"
+    "   --output-call-strings    experimental: print call strings used by PAG\n"
+    "   --no-output-call-strings do not attempt to output call strings\n"
     "   --warn-deprecated        warn about the use of deprecated features\n"
     "   --no-warn-deprecated     do not warn about the use of deprecated features\n"
     "   --help                   print this help message on stdout\n"
@@ -116,8 +118,8 @@ AnalyzerOptions::AnalyzerOptions(): _optionsErrorMessage(""),_optionsInfo(""),_n
     "                            --number-expressions --pag-memsize-mb=5\n"
     "                            --pag-memsize-grow=30 --no-statistics\n"
     "                            --analysis-files=all --analyis-annotation\n"
-    "                            --verbose --warn-deprecated\n"
-    "                            --gdl-nodeformat=no-asttext\n"
+    "                            --verbose --no-output-call-strings\n"
+    "                            --warn-deprecated --gdl-nodeformat=no-asttext\n"
     "                            --gdl-nodeformat=no-varid --gdl-nodeformat=varname\n"
     "                            --gdl-nodeformat=no-exprid\n"
     "                            --gdl-nodeformat=exprsource\n"
