@@ -75,3 +75,5 @@ STRING_ATTR(OutputBinaryAstFileName, "")
 
 BOOL_ATTR(runPointsToAnalysis, Off)
 BOOL_ATTR(resolveFuncPtrCalls, Off)
+
+BOOL_ATTR(outputCallStrings, Off)
